--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -29,6 +29,8 @@ jobs:
                     sudo apt update
                     sudo apt install ros-noetic-ros-base
 
+                    source /opt/ros/noetic/setup.bash
+
                     check_node() {
                         local node_name=$1
                         rosnode list | grep -q "/$node_name"
