--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -36,6 +36,7 @@ jobs:
                             echo "$node_name is running."
                         else
                             echo "Error - $node_name is not running."
+                            kill $pid
                             exit 1
                         fi
                     }
@@ -48,6 +49,7 @@ jobs:
                             echo "$$topic_name has publisher $pub_name and subscriber $sub_name."
                         else
                             echo "Error - $topic_name does not have pub/sub"
+                            kill $pid
                             exit 1
                         fi
                     }
