--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   main-snap:
-    uses: ubuntu-robotics/snap_workflows/.github/workflows/build-install-test-snap.yaml@F_add_snapcraft_channel_option
+    uses: ubuntu-robotics/snap_workflows/.github/workflows/build-install-test-snap.yaml@main
     with:
       ubuntu-image: ubuntu-20.04
       branch-name: main
