--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   main-snap:
-    uses: ubuntu-robotics/snap_workflows/.github/workflows/build-install-test-snap.yaml@main
+    uses: ubuntu-robotics/snap_workflows/.github/workflows/snap.yaml@main
     with:
       ubuntu-image: ubuntu-20.04
       branch-name: main
